# construction-monitor-demo

./: .env.example  .gitignore  COVERAGE.md  CURRENT_STATUS_REPORT.txt  DEV_SETUP.md  Dockerfile  EXECUTIVE_SUMMARY.txt  HANDOVER.md  IMPLEMENTATION_VERIFICATION.md  README.md  SERVICES_STATUS_REPORT.md  SERVICES_VERIFICATION_REPORT.md  SESSION_SUMMARY.md  docker-compose.infra.yml  docker-compose.yml  generate_status_report.py  playback_check.json  pnpm-lock.yaml  production_readiness_report.json  pyproject.toml  pytest.ini  qmd-collections.json  requirements-dev.txt  requirements.txt  run-e2e-tests.sh  run_api.ps1  run_beat.ps1  run_demo.bat  run_demo.ps1  run_demo.sh  server_log.txt  start_infra.ps1  status_check.py
.github/: ORCHESTRATION_STATUS.md  WAVE3_P1-4_TASK_CARD.md  copilot-instructions.md
.github/agents/: geospatial-data-platform.agent.md  operational-frontend-3d.agent.md  planner.agent.md  principal-software-engineer.agent.md  quality-release-engineer.agent.md
.github/hooks/: README.md  copilot-optimizer.json
.github/instructions/: performance-optimization.instructions.md  playwright-python.instructions.md  powershell.instructions.md  tests.instructions.md
.github/prompts/: add-api-endpoint.prompt.md  add-feature.prompt.md  add-frontend-component.prompt.md  create-db-migration.prompt.md  fix-bug.prompt.md  run-optimizer-analysis.prompt.md  write-tests.prompt.md
.github/workflows/: ci.yml
app/: audit_log.py  config.py  cost_guardrails.py  dependencies.py  logging_config.py  main.py  metrics.py  performance_budgets.py  providers.py  rate_limiter.py
app/cache/: client.py  query_cache.py
app/models/: jobs.py  requests.py  responses.py  scene.py
app/providers/: base.py  demo.py  landsat.py  maxar.py  planet.py  registry.py  sentinel2.py
app/resilience/: circuit_breaker.py  rate_limiter.py  retry.py
app/routers/: __init__.py  analyze.py  cache_stats.py  config_router.py  credits.py  health.py  health_connectors.py  jobs.py  providers_router.py  search.py  thumbnails.py  ws_jobs.py
app/services/: analysis.py  change_detection.py  job_manager.py  postgres_jobs.py  (+2 more)
docs/: ALERTING_RULES.md  API.md  ARCHITECTURE.md  CHANGE_DETECTION.md  CONTRACTS.md  DATA_RETENTION_POLICY.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  E2E_PARALLELIZATION_QUICKREF.md  ONCALL.md  PROVIDERS.md  QMD_INSTALLATION.md  README.md  RELEASE_CHECKLIST.md  RUNBOOK.md
frontend/: debug-output.txt  index.html  list-output.txt  package.json  playwright.config.ts  test-output.txt  vite.config.ts  vitest_output.txt
scripts/: Apply-CinematicTransitions.ps1  New-ManagementDemoVideo-Simple.ps1  check_store.py  organize_project.py  test_playback.py  validate_ships.py  write_docs.py
tests/: conftest.py
tools/: New-ManagementDemoVideo-Simple.ps1  debug_stac.py  external_data_sources_inventory.py  generate_external_data_sources_xlsx.py  organize_project.py  run-e2e-tests.ps1  run_api.ps1  run_beat.ps1  run_demo.ps1  run_demo.sh  run_hormuz_test.py  run_worker.ps1  test-qmd.ps1  test_aishub_latmin.py  test_aishub_params.py  test_aisstream.py  test_aisstream_gulf.py  test_connectivity.py  test_hormuz.py  test_opensky.py  test_playback_live.py  test_rapidapi.py  verify_data_sources.py  verify_ships_no_land.py  write_docs.py
(+349 files in other folders)
