# pyproject.toml — CANONICAL DEPENDENCY SOURCE (P0-2.3)
# All dependency changes must be made here first.
# requirements.txt is kept for backward compat; regenerate via:
#   pip-compile pyproject.toml --output-file requirements.txt

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "argus-intel"
version = "2.0.0"
description = "ARGUS — Multi-Domain Surveillance Intelligence Platform"
requires-python = ">=3.11"
license = { text = "Proprietary" }

# ── Core dependencies (run by all environments) ──────────────────────────────
dependencies = [
    # API framework
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    # HTTP client (async + sync)
    "httpx>=0.27.0,<1.0.0",
    # Resilience
    "tenacity>=8.2.0,<10.0.0",
    "slowapi>=0.1.9,<1.0.0",
    # Async task queue (optional: requires Redis)
    "celery[redis]>=5.3.0,<6.0.0",
    "redis>=5.0.0,<8.0.0",
    "cachetools>=5.3.0,<6.0.0",
    # Rate limiting
    "limits>=3.6.0,<4.0.0",
    # Geospatial / raster processing
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "numpy>=1.24.0",
    "scipy>=1.12.0",
    # Observability
    "prometheus-fastapi-instrumentator>=6.1.0,<7.0.0",
]

[project.optional-dependencies]
# ── Connector dependencies (install per-connector as needed) ──────────────────
connectors = [
    # STAC imagery search (Sentinel-2, Landsat, Earth Search, Planetary Computer)
    "pystac-client>=0.7.0,<1.0.0",
    "pystac>=1.10.0,<2.0.0",
    # Raster processing for change detection (needs GDAL — see README for Windows install)
    "rasterio>=1.4.0",
    # AIS maritime connector — AISStream.io WebSocket (P3-1)
    "websockets>=12.0,<14.0",
]

# ── Storage backends ──────────────────────────────────────────────────────────
storage = [
    # PostGIS ORM
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "geoalchemy2>=0.14.0,<1.0.0",
    # Object storage (MinIO / S3)
    "boto3>=1.34.0,<2.0.0",
    # DuckDB for offline analyst workflows (P2-4)
    "duckdb>=0.10.0,<2.0.0",
    # Parquet serialisation (required by ParquetExportService — P2-4.1)
    "pyarrow>=14.0.0,<24.0.0",
]

# ── Development tools ─────────────────────────────────────────────────────────
dev = [
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "types-redis",
    "types-cachetools",
]

# ── Test dependencies ─────────────────────────────────────────────────────────
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "httpx>=0.27.0",   # async test client for FastAPI
    "faker>=24.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "BLE", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
